Fix alignment of hero image on large screens

--- a/components/Home/Home.module.scss
+++ b/components/Home/Home.module.scss
@@ -29,6 +29,7 @@
 }
 
 .hero {
+  text-align: right;
   margin-bottom: calc(22 * var(--space-unit));
 }
 
